--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express-validator": "^7.2.1",
     "jest": "^30.2.0",
     "passport": "^0.7.0",
+    "passport-cookie": "^1.0.9",
     "passport-local": "^1.0.0",
     "supertest": "^7.1.4"
   },
